--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="header">
         <div class="title"><span class="letter">SEARCHING</span></div>
         <form class="search-form">
-            <input class="search-bar" type="text" name="search" placeholder="Search">
+            <input class="search-bar" type="text" name="search" placeholder="國立中央大學">
             <div class="button"><span class="material-symbols-outlined">search</span></div>
         </form>
         <div class="icon">
